Node system now remembers last selected child of a node group, but needs refactoring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <p>Element 1
             </p>
         </div>
-        <div>
+        <div id="elem-cont1">
             <div id="elem2" class="element w-200-h-80">
                 <p>Element 2</p>
             </div>
