Added the movie cards creation on genre change event, thou no navigation on card yet

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div id="interface" class="fill-w fill-h stick-top">
             <div id="menubar" class="fill-w stick-top">
                 <div id="menu-center">
-                    <div id="menu-search" class="menu-tab menu-active"></div>
-                    <div id="menu-live" class="menu-tab menu-last-pressed"></div>
-                    <div id="menu-vod" class="menu-tab menu-selected"></div>
-                    <div id="menu-apps" class="menu-tab menu-pressed-selected"></div>
+                    <div id="menu-search" class="menu-tab"></div>
+                    <div id="menu-live" class="menu-tab"></div>
+                    <div id="menu-vod" class="menu-tab"></div>
+                    <div id="menu-apps" class="menu-tab"></div>
                 </div>
                 <div id="menu-right" class="stick-right">
                     <div id="menu-settings" class="menu-tab menu-active"></div>
@@ -22,22 +22,10 @@
             <div id="genres-line">
             </div>
             <div id="movies-line">
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
             </div>
             <div id="movie-info-line">
-                <h1 id="movie-title">Sample text (2022)</h1>
-                <p id="movie-info">Сша, Великобритания, 2022  Боевик, Мелодрама
-                    <span class="age-rating">18+</span>
-                    IMDb:9.4 <img class="star-icon" src="img/rating-star-icon.png">
-                    Кинопоиск:9.0 <img class="star-icon" src="img/rating-star-icon.png"></p>
+                <h1 id="movie-title"></h1>
+                <p id="movie-info"></p>
             </div>
         </div>
         <div id="shadows" class="fill-w fill-h">
