First Fully Functional prototype, but needs refactoring, maybe even change of layout structure

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div id="shadows" class="fill-w fill-h">
             <img class="stick-left fill-h" src="img/left-shadow.png">
             <img class="stick-right fill-h" src="img/right-shadow.png">
-            <div id="loader-wrapper" class="fill-h fill-w">
+            <img id="underline" src="/img/underline.png" class="display-none">
+            <div id="loader-wrapper" class="fill-h fill-w display-none">
                 <img id="loader" src="img/loader.gif">
             </div>
             <!--        <img class="stick-top fill-w" src="img/top-shadow-big.png">-->
