--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <div id="menu-settings" class="menu-tab menu-active"></div>
                 </div>
             </div>
+
             <div id="genres-line">
             </div>
             <div id="movies-line">
@@ -31,7 +32,8 @@
         <div id="shadows" class="fill-w fill-h">
             <img class="stick-left fill-h" src="img/left-shadow.png">
             <img class="stick-right fill-h" src="img/right-shadow.png">
-            <img id="underline" src="/img/underline.png" class="display-none">
+            <img id="underline1" src="./img/underline.png" class="display-none">
+            <img id="underline2" src="./img/underline.png" class="display-none">
             <div id="loader-wrapper" class="fill-h fill-w display-none">
                 <img id="loader" src="img/loader.gif">
             </div>
