Implemented new navigation system, based on MenuObjects and MenuTabs

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
                     <div id="menu-apps" class="menu-tab"></div>
                 </div>
                 <div id="menu-right" class="stick-right">
-                    <div id="menu-settings" class="menu-tab menu-active"></div>
+                    <div id="menu-settings" class="menu-tab"></div>
                 </div>
             </div>
 
-            <div id="genres-line">
-            </div>
-            <div id="movies-line">
-            </div>
+            <div id="genres-line"></div>
+            <div id="movies-line"></div>
             <div id="movie-info-line">
                 <h1 id="movie-title"></h1>
                 <p id="movie-info"></p>
@@ -32,8 +30,6 @@
         <div id="shadows" class="fill-w fill-h">
             <img class="stick-left fill-h" src="img/left-shadow.png">
             <img class="stick-right fill-h" src="img/right-shadow.png">
-            <img id="underline1" src="./img/underline.png" class="display-none">
-            <img id="underline2" src="./img/underline.png" class="display-none">
             <div id="loader-wrapper" class="fill-h fill-w display-none">
                 <img id="loader" src="img/loader.gif">
             </div>
@@ -41,8 +37,9 @@
         </div>
 
     </div>
-    <script src="scripts.js"></script>
+    <script src="menu.js"></script>
     <script src="movies.js"></script>
+    <script src="scripts.js"></script>
 <script src="navigation.js"></script>
 </body>
 </html>
