First version of mag-optimized page, plays a video './videos/NGGYU.mp4' when 'ok' button is pressed in movies menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                     <div id="menu-settings" class="menu-tab"></div>
                 </div>
             </div>
-
             <div id="genres-line"></div>
             <div id="movies-line"></div>
             <div id="movie-info-line">
@@ -33,7 +32,7 @@
             <div id="loader-wrapper" class="fill-h fill-w display-none">
                 <img id="loader" src="img/loader.gif">
             </div>
-            <!--        <img class="stick-top fill-w" src="img/top-shadow-big.png">-->
+            <h4 id="debug-text">text</h4>
         </div>
 
     </div>
