Added Volume, aspect ratio and display mode control, forward speed up and backward rewind, but limited

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div id="loader-wrapper" class="fill-h fill-w display-none">
                 <img id="loader" src="img/loader.gif">
             </div>
+            <div id="player"></div>
             <h4 id="debug-text">text</h4>
         </div>
 
@@ -39,6 +40,7 @@
     <script src="menu.js"></script>
     <script src="movies.js"></script>
     <script src="scripts.js"></script>
-<script src="navigation.js"></script>
+    <script src="navigation.js"></script>
+    <script language="JavaScript" src="event.js"></script>
 </body>
 </html>
